--- a/.github/workflows/dockerlint.yml
+++ b/.github/workflows/dockerlint.yml
@@ -1,3 +1,12 @@
-- name: Docker Lint
-  uses: luke142367/Docker-Lint-Action@v1.0.0
-
+name: Dockerlint
+on:
+  pull_request:
+    branches:
+    - master
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Docker Lint
+      uses: luke142367/Docker-Lint-Action@v1.0.0
