conver to push on tags since release doesn't seem to work

--- a/.github/workflows/dockereadme.yml
+++ b/.github/workflows/dockereadme.yml
@@ -1,5 +1,8 @@
 name: Update Docker Hub Description
-on: [release]
+on:
+  push:
+    tags:
+      - '*.*.*'
 jobs:
   dockerHubDescription:
     runs-on: ubuntu-latest
